--- a/mytemplates/registration/login.html
+++ b/mytemplates/registration/login.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form }}
-        <button type="submit">Login</button>
-    </form>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load bootstrap %}
+{% block title %}Welcome - Login{% endblock %}
+
+{% block main %}
+    <div class="jumbotron">
+        <form method="POST">
+            {% csrf_token %}
+            {{ form|bootstrap }}
+            <button type="submit">Login</button>
+        </form>
+    </div>
+{% endblock %}
